<resources>

        <string name="app_name">框架展示</string>
        <string name="menu_home">附近</string>
        <string name="menu_talk">消息</string>
        <string name="menu_hot">通讯录</string>
        <string name="menu_me">我的</string>
        <string name="action_settings">Settings</string>
        <string name="hello_world">Hello world!</string>
        <string name="title_activity_main">MainActivity</string>
        <string name="menu_kill">技能</string>
        <string name="me">个人资料</string>
        <string name="maillist">通讯录</string>
        <string name="kill">技能</string>
        <string name="message">消息(16)</string>
        <string name="nearby">附近</string>

</resources>
