<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_view"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/menu_bgcolor"
        >
        <!-- 附近 -->
        <LinearLayout
            android:id="@+id/ll_menu_nearby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_nearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_home"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/tv_menu_nearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_home"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 消息 -->
        <LinearLayout
            android:id="@+id/ll_menu_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_hot"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/tv_menu_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_talk"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 通信录 -->
        <LinearLayout
            android:id="@+id/ll_menu_mail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_talk"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/tv_menu_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_hot"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 技能 -->
        <LinearLayout
            android:id="@+id/ll_menu_kill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_kill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_hot"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/tv_menu_kill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_kill"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
        <!-- 我的 -->
        <LinearLayout
            android:id="@+id/ll_menu_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:onClick="clickMenu"
            >
            <ImageView
                android:id="@+id/iv_menu_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_me"
                android:contentDescription="@string/app_name"
                />
            <TextView
                android:id="@+id/tv_menu_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_me"
                android:textColor="@color/menu_nomarl"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>